--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,21 +9,88 @@ body {
   position: relative;
 }
 
+::-webkit-scrollbar {
+  width: 2px;
+  border-radius: 1rem;
+  display: none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(127, 90, 240, 0.5);
+  border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  border-radius: 1rem;
+  background: rgba(127, 90, 240, 0.8);
+}
+
 .home {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 100vh;
   z-index: 20;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  border-right: 1px solid rgba(114, 117, 126, 0.7);
+  border-left: 1px solid rgba(114, 117, 126, 0.7);
+  padding: 0 2rem 0 2rem;
+}
+@media screen and (min-width: 1950px) {
+  .home {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 1550px) {
+  .home {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .home {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .home {
+    width: 90%;
+    border-right: none;
+    border-left: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  .home {
+    width: 100%;
+    border-right: none;
+    border-left: none;
+    padding: 0 1rem 0 1rem;
+  }
 }
 .home_title {
   text-align: center;
-  width: 40%;
+  width: 60%;
   font-size: 3rem;
   letter-spacing: 0rem;
   font-weight: bold;
   color: white;
+  margin-top: 10rem;
+}
+@media screen and (max-width: 500px) {
+  .home_title {
+    width: 80%;
+    margin-top: 7rem;
+  }
 }
 
 .home > * {
@@ -88,6 +155,11 @@ body {
   border-radius: 1rem;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   transition: all 0.2s;
+}
+@media screen and (max-width: 550px) {
+  .popup {
+    width: 40rem;
+  }
 }
 
 .popup_LOGIN_close {
@@ -237,4 +309,71 @@ body {
 }
 .login_btn:active {
   transform: translateY(1px);
+}
+
+.news {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 3rem;
+  padding: 1rem;
+}
+.news_container {
+  height: 50vh;
+  overflow: auto;
+}
+@media screen and (max-width: 1050px) {
+  .news {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+}
+@media screen and (max-width: 700px) {
+  .news {
+    grid-template-columns: 1fr;
+  }
+}
+.news_title {
+  text-align: left;
+  margin-bottom: 2rem;
+  color: #fff;
+  font-size: 1.6rem;
+}
+.news_article {
+  align-self: center;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  outline: 1px solid rgba(169, 169, 169, 0.3);
+  outline-offset: -0.5rem;
+  transition: all 0.2s;
+}
+.news_article_details {
+  margin-left: 1rem;
+}
+.news_article_game {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+.news_article_description {
+  font-size: 1.4rem;
+  color: #94a1b2;
+  margin-right: 0.5rem;
+}
+.news_article:hover {
+  transform: translateY(-3px);
+  outline-offset: 0rem;
+}
+.news_article:hover .news_img {
+  transform: scale(0.9);
+}
+.news_article:active {
+  transform: translateY(3px);
+}
+.news_img {
+  width: 50%;
+  height: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 0.2s;
 }
