--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -10,22 +10,78 @@ body {
     background-size: cover;
     position: relative;
 }
+::-webkit-scrollbar {
+    width: 2px;
+    border-radius: 1rem;
+    display: none;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(#7f5af0, 0.5);
+    border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    border-radius: 1rem;
+    background: rgba(#7f5af0, 0.8);
+}
 .home {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
+    justify-content: space-between;
     height: 100vh;
     z-index: 20;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    border-right: 1px solid rgba(#72757e, 0.7);
+    border-left: 1px solid rgba(#72757e, 0.7);
+
+    padding: 0 2rem 0 2rem;
+
+    @media screen and (min-width: 1950px) {
+        width: 60%;
+    }
+    @media screen and (max-width: 1550px) {
+        width: 75%;
+    }
+    @media screen and (max-width: 1200px) {
+        width: 80%;
+    }
+    @media screen and (max-width: 1000px) {
+        width: 90%;
+        border-right: none;
+        border-left: none;
+    }
+    @media screen and (max-width: 600px) {
+        width: 100%;
+        border-right: none;
+        border-left: none;
+        padding: 0 1rem 0 1rem;
+    }
 
     &_title {
         text-align: center;
-        width: 40%;
+        width: 60%;
         font-size: 3rem;
         letter-spacing: 0rem;
         font-weight: bold;
         color: white;
+        margin-top: 10rem;
+        @media screen and (max-width: 500px) {
+            width: 80%;
+            margin-top: 7rem;
+        }
     }
 }
 .home > * {
@@ -89,6 +145,10 @@ body {
     border-radius: 1rem;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     transition: all 0.2s;
+
+    @media screen and (max-width: 550px) {
+        width: 40rem;
+    }
 }
 .popup_LOGIN_close {
     position: absolute;
@@ -226,5 +286,85 @@ body {
     }
     &:active {
         transform: translateY(1px);
+    }
+}
+
+.news {
+    &_container {
+        // width: 70%;
+        // margin-left: auto;
+        // margin-right: auto;
+        height: 50vh;
+        overflow: auto;
+    }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 3rem;
+    padding: 1rem;
+
+    @media screen and (max-width: 1050px) {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+
+    @media screen and (max-width: 700px) {
+        grid-template-columns: 1fr;
+    }
+
+    &_title {
+        text-align: left;
+        margin-bottom: 2rem;
+        color: #fff;
+        font-size: 1.6rem;
+    }
+
+    &_article {
+        align-self: center;
+        display: flex;
+        align-items: center;
+        //justify-content: center;
+        cursor: pointer;
+        text-decoration: none;
+
+        outline: 1px solid rgba(169, 169, 169, 0.3);
+        //outline: 1px solid rgba($color-aqua,.4);
+        outline-offset: -0.5rem;
+
+        &_details {
+            margin-left: 1rem;
+        }
+
+        &_game {
+            font-size: 1.6rem;
+            text-transform: uppercase;
+            color: #fff;
+        }
+
+        &_description {
+            font-size: 1.4rem;
+            color: #94a1b2;
+            margin-right: 0.5rem;
+        }
+
+        transition: all 0.2s;
+
+        &:hover {
+            .news_img {
+                transform: scale(0.9);
+            }
+            transform: translateY(-3px);
+            //box-shadow: 1px 2px 22px 7px rgba(0, 0, 0, 0.3);
+            outline-offset: 0rem;
+        }
+        &:active {
+            transform: translateY(3px);
+            //box-shadow: 1px 2px 22px 7px rgba(0, 0, 0, 0.6);
+        }
+    }
+
+    &_img {
+        width: 50%;
+        height: 50%;
+        object-fit: cover;
+        transition: all 0.2s;
     }
 }
