--- a/public/css/match.css
+++ b/public/css/match.css
@@ -1,3 +1,112 @@
 body {
-  background-color: gray;
+  background-color: #16161a;
+}
+
+.match {
+  color: #fffffe;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  gap: 2rem;
+  margin-top: 4rem;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100vh;
+}
+.match_error {
+  margin-left: 30%;
+  margin-right: 30%;
+  text-align: center;
+  font-size: 2.5rem;
+  color: #fffffe;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  border-radius: 3px;
+  padding: 1rem;
+  background-color: #242629;
+  border: 1px solid rgba(114, 117, 126, 0.2);
+}
+@media screen and (max-width: 1500px) {
+  .match_error {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .match_error {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .match_error {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
+.match_error > * {
+  margin-bottom: 3rem;
+}
+.match_error_name {
+  color: #7f5af0;
+}
+.match_error_back {
+  text-decoration: none;
+  background-color: #7f5af0;
+  padding: 0.7rem;
+  font-weight: normal;
+  color: #fffffe;
+  font-size: 2rem;
+  border-radius: 0.2rem;
+}
+.match_error_player {
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 1.6rem;
+}
+.match_error_player > * {
+  margin-right: 0.5rem;
+}
+.match_error_player img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+.match_error_player a {
+  color: inherit;
+}
+.match_profile {
+  background-color: #242629;
+  border: 1px solid rgba(114, 117, 126, 0.2);
+  font-size: 1.4rem;
+  width: 100%;
+  height: 20rem;
+  margin-bottom: 2rem;
+  border-radius: 3px;
+}
+.match_ranks {
+  background-color: #242629;
+  border: 1px solid rgba(114, 117, 126, 0.2);
+  font-size: 1.4rem;
+  width: 100%;
+  height: 15rem;
+  border-radius: 3px;
+}
+.match_summary {
+  background-color: #242629;
+  border: 1px solid rgba(114, 117, 126, 0.2);
+  font-size: 1.4rem;
+  width: 100%;
+  height: 20rem;
+  margin-bottom: 2rem;
+  border-radius: 3px;
+}
+.match_history {
+  background-color: #242629;
+  border: 1px solid rgba(114, 117, 126, 0.2);
+  font-size: 1.4rem;
+  width: 100%;
+  border-radius: 3px;
 }
