--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -1,3 +1,126 @@
 body {
-    background-color: gray;
+    background-color: #16161a;
+}
+
+.match {
+    color: #fffffe;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    gap: 2rem;
+    margin-top: 4rem;
+
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100vh;
+
+    &_error {
+        margin-left: 30%;
+        margin-right: 30%;
+        text-align: center;
+        font-size: 2.5rem;
+        color: #fffffe;
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+        border-radius: 3px;
+        // height: 100vh;
+        padding: 1rem;
+        background-color: #242629;
+        border: 1px solid rgba(#72757e, 0.2);
+
+        @media screen and (max-width: 1500px) {
+            margin-left: 15%;
+            margin-right: 15%;
+        }
+        @media screen and (max-width: 1000px) {
+            margin-left: 10%;
+            margin-right: 10%;
+        }
+        @media screen and (max-width: 600px) {
+            margin-left: 5%;
+            margin-right: 5%;
+        }
+
+        & > * {
+            margin-bottom: 3rem;
+        }
+        &_name {
+            color: #7f5af0;
+        }
+
+        &_back {
+            text-decoration: none;
+            background-color: #7f5af0;
+            padding: 0.7rem;
+            font-weight: normal;
+            color: #fffffe;
+            font-size: 2rem;
+            border-radius: 0.2rem;
+        }
+        &_player {
+            text-align: left;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            font-size: 1.6rem;
+
+            & > * {
+                margin-right: 0.5rem;
+            }
+
+            img {
+                width: 3rem;
+                height: 3rem;
+                border-radius: 50%;
+            }
+            a {
+                // text-decoration: none;
+                color: inherit;
+            }
+        }
+    }
+
+    &_left {
+    }
+
+    &_right {
+    }
+
+    &_profile {
+        background-color: #242629;
+        border: 1px solid rgba(#72757e, 0.2);
+        font-size: 1.4rem;
+        width: 100%;
+        height: 20rem;
+        margin-bottom: 2rem;
+        border-radius: 3px;
+    }
+
+    &_ranks {
+        background-color: #242629;
+        border: 1px solid rgba(#72757e, 0.2);
+        font-size: 1.4rem;
+        width: 100%;
+        height: 15rem;
+        border-radius: 3px;
+    }
+
+    &_summary {
+        background-color: #242629;
+        border: 1px solid rgba(#72757e, 0.2);
+        font-size: 1.4rem;
+        width: 100%;
+        height: 20rem;
+        margin-bottom: 2rem;
+        border-radius: 3px;
+    }
+
+    &_history {
+        background-color: #242629;
+        border: 1px solid rgba(#72757e, 0.2);
+        font-size: 1.4rem;
+        width: 100%;
+        // height: 100%;
+        border-radius: 3px;
+    }
 }
