--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -91,18 +91,12 @@ body {
         border: 1px solid rgba(#72757e, 0.2);
         font-size: 1.4rem;
         width: 100%;
-        height: 20rem;
         margin-bottom: 2rem;
         border-radius: 3px;
     }
 
     &_ranks {
-        background-color: #242629;
-        border: 1px solid rgba(#72757e, 0.2);
         font-size: 1.4rem;
-        width: 100%;
-        height: 15rem;
-        border-radius: 3px;
     }
 
     &_summary {
@@ -122,5 +116,104 @@ body {
         width: 100%;
         // height: 100%;
         border-radius: 3px;
+    }
+}
+.profile {
+    color: #fffffe;
+    background-color: #242629;
+    border: 1px solid rgba(#72757e, 0.2);
+    font-size: 1.4rem;
+
+    display: grid;
+    grid-template-columns: min-content max-content;
+    gap: 0.5rem;
+    align-items: center;
+
+    @media screen and (max-width: 1000px) {
+        display: flex;
+        flex-direction: column;
+        padding: 0 2rem 0 2rem;
+        text-align: center;
+
+        &_name {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            // padding: .5rem;
+            svg {
+                margin-left: 0rem;
+                margin: 0.5rem 0 1rem 0;
+            }
+        }
+    }
+    @media screen and (max-width: 500px) {
+        flex-direction: row;
+        text-align: left;
+        padding: 0;
+
+        &_name {
+            display: flex;
+            flex-direction: row;
+        }
+    }
+    &_name {
+        font-size: 2.4rem;
+        display: flex;
+        align-items: center;
+        svg {
+            margin-left: 1rem;
+            cursor: pointer;
+            color: #7f5af0;
+        }
+    }
+
+    &_img {
+        display: flex;
+        align-items: center;
+        img {
+            width: 8rem;
+            height: 8rem;
+            border: 3px solid rgba(#72757e, 0.5);
+        }
+        padding: 1rem;
+    }
+}
+.ranks {
+    margin-top: 1rem;
+    background-color: #242629;
+    border: 1px solid rgba(#72757e, 0.2);
+    font-size: 1.4rem;
+    padding: 1rem 0 1rem 0;
+    border-radius: 3px;
+
+    & > *:not(:last-child) {
+        margin-bottom: 1rem;
+        border-bottom: 1px solid rgba(#72757e, 0.2);
+        padding-bottom: 1rem;
+    }
+
+    &_rank {
+        display: flex;
+        align-items: center;
+        padding-left: 1rem;
+        padding: 0.5rem;
+
+        &_img {
+            margin-right: 1rem;
+            img {
+                width: 9rem;
+                height: 8rem;
+                object-fit: cover;
+            }
+        }
+
+        &_title {
+            font-size: 1.5rem;
+            color: gray;
+        }
+        &_color {
+            color: gray;
+        }
     }
 }
