livewire match history DONE

--- a/public/css/match.css
+++ b/public/css/match.css
@@ -103,6 +103,7 @@ body {
   font-size: 1.4rem;
   width: 100%;
   border-radius: 3px;
+  padding: 1rem;
 }
 
 .profile {
@@ -200,4 +201,22 @@ body {
 }
 .ranks_rank_color {
   color: gray;
+}
+
+.game {
+  padding: 0.5rem;
+  background-color: #72757e;
+  margin-bottom: 2rem;
+  border-radius: 3px;
+}
+.game_loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5rem;
+  height: 5rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
