--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -8,6 +8,8 @@ body {
     grid-template-columns: 30% 70%;
     gap: 2rem;
     margin-top: 4rem;
+    // overflow-y: hidden;
+    margin-bottom: 4rem;
 
     width: 80%;
     margin-left: auto;
