--- a/public/css/match.css
+++ b/public/css/match.css
@@ -8,6 +8,7 @@ body {
   grid-template-columns: 30% 70%;
   gap: 2rem;
   margin-top: 4rem;
+  margin-bottom: 4rem;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
