--- a/public/css/home.css
+++ b/public/css/home.css
@@ -23,14 +23,14 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(127, 90, 240, 0.5);
+  background: rgba(var(--main), 0.5);
   border-radius: 1rem;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   border-radius: 1rem;
-  background: rgba(127, 90, 240, 0.8);
+  background: rgba(var(--main), 0.8);
 }
 
 .home {
@@ -45,6 +45,7 @@ body {
   margin-right: auto;
   border-right: 1px solid rgba(114, 117, 126, 0.7);
   border-left: 1px solid rgba(114, 117, 126, 0.7);
+  overflow: hidden;
   padding: 0 2rem 0 2rem;
 }
 @media screen and (min-width: 1950px) {
@@ -83,7 +84,7 @@ body {
   font-size: 3rem;
   letter-spacing: 0rem;
   font-weight: bold;
-  color: white;
+  color: var(--text);
   margin-top: 10rem;
 }
 @media screen and (max-width: 500px) {
@@ -132,14 +133,14 @@ body {
   outline: none;
   border: none;
   cursor: pointer;
-  background-color: #7f5af0;
+  background-color: var(--main);
   width: 5rem;
 }
 
 .home_form_btn svg {
   width: 2rem;
   height: 100%;
-  fill: #fff;
+  fill: var(--text);
   font-weight: bold;
 }
 
@@ -151,7 +152,7 @@ body {
   z-index: 200;
   width: 60rem;
   height: 50rem;
-  background-color: #fffffe;
+  background-color: var(--text);
   border-radius: 1rem;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   transition: all 0.2s;
@@ -197,7 +198,7 @@ body {
   font-size: 3rem;
   padding: 2rem;
   padding-bottom: 0;
-  color: #7f5af0;
+  color: var(--main);
   font-weight: bold;
 }
 
@@ -235,8 +236,8 @@ body {
 
 .popup_form_btn {
   padding: 1rem;
-  background-color: #7f5af0;
-  color: #fff;
+  background-color: var(--main);
+  color: var(--text);
   border-radius: 0.5rem;
   font-family: inherit;
   border: none;
@@ -295,8 +296,8 @@ body {
   position: absolute;
   top: 1rem;
   right: 2rem;
-  color: #fff;
-  background-color: #7f5af0;
+  color: var(--text);
+  background-color: var(--main);
   padding: 1rem 2rem;
   border-radius: 0.5rem;
   font-size: 1.6rem;
@@ -334,7 +335,7 @@ body {
 .news_title {
   text-align: left;
   margin-bottom: 2rem;
-  color: #fff;
+  color: var(--text);
   font-size: 1.6rem;
 }
 .news_article {
@@ -353,7 +354,7 @@ body {
 .news_article_game {
   font-size: 1.6rem;
   text-transform: uppercase;
-  color: #fff;
+  color: var(--text);
 }
 .news_article_description {
   font-size: 1.4rem;
