--- a/public/css/match.css
+++ b/public/css/match.css
@@ -3,7 +3,7 @@ body {
 }
 
 .match {
-  color: #fffffe;
+  color: var(--text);
   display: grid;
   grid-template-columns: 30% 70%;
   gap: 2rem;
@@ -19,12 +19,12 @@ body {
   margin-right: 30%;
   text-align: center;
   font-size: 2.5rem;
-  color: #fffffe;
+  color: var(--text);
   margin-top: 4rem;
   margin-bottom: 4rem;
   border-radius: 3px;
   padding: 1rem;
-  background-color: #242629;
+  background-color: var(--black_box);
   border: 1px solid rgba(114, 117, 126, 0.2);
 }
 @media screen and (max-width: 1500px) {
@@ -49,14 +49,14 @@ body {
   margin-bottom: 3rem;
 }
 .match_error_name {
-  color: #7f5af0;
+  color: var(--main);
 }
 .match_error_back {
   text-decoration: none;
-  background-color: #7f5af0;
+  background-color: var(--main);
   padding: 0.7rem;
   font-weight: normal;
-  color: #fffffe;
+  color: var(--text);
   font-size: 2rem;
   border-radius: 0.2rem;
 }
@@ -79,7 +79,7 @@ body {
   color: inherit;
 }
 .match_profile {
-  background-color: #242629;
+  background-color: var(--black_box);
   border: 1px solid rgba(114, 117, 126, 0.2);
   font-size: 1.4rem;
   width: 100%;
@@ -90,7 +90,7 @@ body {
   font-size: 1.4rem;
 }
 .match_summary {
-  background-color: #242629;
+  background-color: var(--black_box);
   border: 1px solid rgba(114, 117, 126, 0.2);
   font-size: 1.4rem;
   width: 100%;
@@ -99,7 +99,7 @@ body {
   border-radius: 3px;
 }
 .match_history {
-  background-color: #242629;
+  background-color: var(--black_box);
   border: 1px solid rgba(114, 117, 126, 0.2);
   font-size: 1.4rem;
   width: 100%;
@@ -108,8 +108,8 @@ body {
 }
 
 .profile {
-  color: #fffffe;
-  background-color: #242629;
+  color: var(--text);
+  background-color: var(--black_box);
   border: 1px solid rgba(114, 117, 126, 0.2);
   font-size: 1.4rem;
   display: grid;
@@ -155,7 +155,7 @@ body {
 .profile_name svg {
   margin-left: 1rem;
   cursor: pointer;
-  color: #7f5af0;
+  color: var(--main);
 }
 .profile_img {
   display: flex;
@@ -170,7 +170,7 @@ body {
 
 .ranks {
   margin-top: 1rem;
-  background-color: #242629;
+  background-color: var(--black_box);
   border: 1px solid rgba(114, 117, 126, 0.2);
   font-size: 1.4rem;
   padding: 1rem 0 1rem 0;
