--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -24,14 +24,14 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgba(#7f5af0, 0.5);
+    background: rgba(var(--main), 0.5);
     border-radius: 1rem;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     border-radius: 1rem;
-    background: rgba(#7f5af0, 0.8);
+    background: rgba(var(--main), 0.8);
 }
 .home {
     display: flex;
@@ -46,6 +46,8 @@ body {
     margin-right: auto;
     border-right: 1px solid rgba(#72757e, 0.7);
     border-left: 1px solid rgba(#72757e, 0.7);
+    // overflow: scroll;
+    overflow: hidden;
 
     padding: 0 2rem 0 2rem;
 
@@ -76,7 +78,7 @@ body {
         font-size: 3rem;
         letter-spacing: 0rem;
         font-weight: bold;
-        color: white;
+        color: var(--text);
         margin-top: 10rem;
         @media screen and (max-width: 500px) {
             width: 80%;
@@ -121,14 +123,14 @@ body {
     outline: none;
     border: none;
     cursor: pointer;
-    background-color: #7f5af0;
+    background-color: var(--main);
     width: 5rem;
 }
 
 .home_form_btn svg {
     width: 2rem;
     height: 100%;
-    fill: #fff;
+    fill: var(--text);
     font-weight: bold;
 }
 
@@ -141,7 +143,7 @@ body {
 
     width: 60rem;
     height: 50rem;
-    background-color: #fffffe;
+    background-color: var(--text);
     border-radius: 1rem;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     transition: all 0.2s;
@@ -180,7 +182,7 @@ body {
     font-size: 3rem;
     padding: 2rem;
     padding-bottom: 0;
-    color: #7f5af0;
+    color: var(--main);
     font-weight: bold;
 }
 .popup_form_center {
@@ -214,8 +216,8 @@ body {
 
 .popup_form_btn {
     padding: 1rem;
-    background-color: #7f5af0;
-    color: #fff;
+    background-color: var(--main);
+    color: var(--text);
     border-radius: 0.5rem;
     font-family: inherit;
     border: none;
@@ -272,8 +274,8 @@ body {
     position: absolute;
     top: 1rem;
     right: 2rem;
-    color: #fff;
-    background-color: #7f5af0;
+    color: var(--text);
+    background-color: var(--main);
     padding: 1rem 2rem;
     border-radius: 0.5rem;
     font-size: 1.6rem;
@@ -313,7 +315,7 @@ body {
     &_title {
         text-align: left;
         margin-bottom: 2rem;
-        color: #fff;
+        color: var(--text);
         font-size: 1.6rem;
     }
 
@@ -336,7 +338,7 @@ body {
         &_game {
             font-size: 1.6rem;
             text-transform: uppercase;
-            color: #fff;
+            color: var(--text);
         }
 
         &_description {
