--- a/resources/scss/base.scss
+++ b/resources/scss/base.scss
@@ -6,13 +6,24 @@
     box-sizing: inherit;
 }
 :root {
-    --main: #7f5af0;  
-    --text: #fffffe; 
+    --main: #7f5af0;
+    --text: #fffffe;
     --black_box: #242629; //  var(--black_box)
-    --background:#16161a;
-  }
+    --background: #16161a;
 
+    --color-first: rgb(255, 215, 0);
+    --color-first07: rgba(255, 215, 0, 0.7);
+    --color-first01: rgba(255, 215, 0, 0.1);
 
+    --color-win: rgb(44, 182, 125);
+    --color-lose: rgb(240, 128, 128);
+
+    --color-win07: rgba(44, 182, 125, 0.4);
+    --color-win01: rgba(44, 182, 125, 0.1);
+
+    --color-lose07: rgba(240, 128, 128, 0.4);
+    --color-lose01: rgba(240, 128, 128, 0.1);
+}
 
 html {
     font-size: 62.5%;
