--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -295,4 +295,27 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+
+    &_traits {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        // gap: 0.4rem;
+
+        &_trait {
+            display: flex;
+            align-items: center;
+
+            &_img {
+                &_TRAIT {
+                    padding: 1rem;
+                    width: 5rem;
+                    height: 5rem;
+                    // heigth: 100%;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+            }
+        }
+    }
 }
