--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -16,6 +16,16 @@ body {
     margin-right: auto;
     height: max-content;
 
+    @media screen and (max-width: 1600px) {
+        width: 90%;
+    }
+    @media screen and (max-width: 1600px) {
+        width: 95%;
+    }
+    @media screen and (max-width: 1000px) {
+        grid-template-columns: 1fr;
+    }
+
     &_error {
         margin-left: 30%;
         margin-right: 30%;
@@ -83,6 +93,16 @@ body {
     }
 
     &_left {
+        @media screen and (max-width: 1000px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            align-items: stretch;
+            gap: 1rem;
+            justify-content: center;
+        }
+        @media screen and (max-width: 500px) {
+            grid-template-columns: 1fr;
+        }
     }
 
     &_right {
@@ -95,6 +115,9 @@ body {
         width: 100%;
         margin-bottom: 2rem;
         border-radius: 3px;
+        @media screen and (max-width: 1000px) {
+            margin-bottom: 0;
+        }
     }
 
     &_ranks {
@@ -134,9 +157,14 @@ body {
 
     @media screen and (max-width: 1000px) {
         display: flex;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
         padding: 0 2rem 0 2rem;
         text-align: center;
+        margin-bottom: 0;
+        height: 100%;
+        // text-align: left;
 
         &_name {
             display: flex;
@@ -153,7 +181,8 @@ body {
     @media screen and (max-width: 500px) {
         flex-direction: row;
         text-align: left;
-        padding: 0;
+        justify-content: flex-start;
+        padding: 1rem 0;
 
         &_name {
             display: flex;
@@ -164,10 +193,20 @@ body {
         font-size: 2.4rem;
         display: flex;
         align-items: center;
+        @media screen and (max-width: 500px) {
+            justify-content: flex-start;
+        }
         svg {
             margin-left: 1rem;
             cursor: pointer;
             color: var(--main);
+
+            @media screen and (max-width: 1000px) {
+                margin-left: 0;
+            }
+            @media screen and (max-width: 500px) {
+                margin-left: 1rem;
+            }
         }
     }
 
@@ -189,6 +228,10 @@ body {
     font-size: 1.4rem;
     padding: 1rem 0 1rem 0;
     border-radius: 3px;
+
+    @media screen and (max-width: 1000px) {
+        margin-top: 0;
+    }
 
     & > *:not(:last-child) {
         margin-bottom: 1rem;
@@ -236,9 +279,9 @@ body {
     margin-bottom: 2rem;
     border-radius: 3px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 10% 10% 1fr 1fr 1fr 1fr 3rem;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
 
     &_companionIMG {
         width: 5rem;
@@ -269,6 +312,26 @@ body {
         );
     }
 
+    &_extend {
+        height: 100%;
+        cursor: pointer;
+        border: none;
+        border-radius: 3px;
+
+        &_win {
+            background-color: var(--color-win07);
+            color: #fff;
+        }
+        &_lose {
+            background-color: var(--color-lose07);
+            color: #fff;
+        }
+        &_first {
+            background-color: var(--color-first07);
+            color: #72757e;
+        }
+    }
+
     &_details {
         text-align: center;
         &_place {
@@ -282,6 +345,7 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        white-space: nowrap;
     }
 
     &_loading {
@@ -299,17 +363,17 @@ body {
     &_traits {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        // gap: 0.4rem;
+        gap: 0 !important;
 
         &_trait {
-            display: flex;
-            align-items: center;
+            // display: flex;
+            // align-items: center;
 
             &_img {
                 &_TRAIT {
                     padding: 1rem;
-                    width: 5rem;
-                    height: 5rem;
+                    width: 4rem;
+                    height: 4rem;
                     // heigth: 100%;
                     background-position: center;
                     background-repeat: no-repeat;
