--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -279,14 +279,16 @@ body {
     margin-bottom: 2rem;
     border-radius: 3px;
     display: grid;
-    grid-template-columns: 10% 10% 1fr 1fr 1fr 1fr 3rem;
+    grid-template-columns: 10% 10% 15% 5% 1fr 5% 3rem;
     align-items: center;
     gap: 2rem;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.3);
 
     &_companionIMG {
         width: 5rem;
         height: 5rem;
-        border-radius: 50%;
+        border-radius: 0.8rem;
+        border: 2px solid black;
         object-fit: cover;
     }
 
@@ -363,13 +365,17 @@ body {
     &_traits {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        gap: 0 !important;
+        gap: 0;
+        row-gap: 0.5rem;
 
         &_trait {
             // display: flex;
             // align-items: center;
 
             &_img {
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 &_TRAIT {
                     padding: 1rem;
                     width: 4rem;
@@ -381,5 +387,36 @@ body {
                 }
             }
         }
+    }
+    &_auguments {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        & > * {
+            border-radius: 3px;
+        }
+
+        & > *:not(:last-child) {
+            margin-bottom: 0.5rem;
+        }
+        &_img {
+            width: 3rem;
+            height: 3rem;
+        }
+    }
+
+    &_champs {
+        &_img {
+            width: 4rem;
+            height: 4rem;
+            object-fit: cover;
+            border: 1px solid black;
+            border-radius: 5px;
+        }
+    }
+    &_stats {
+        justify-self: center;
     }
 }
