--- a/public/css/match.css
+++ b/public/css/match.css
@@ -383,6 +383,15 @@ body {
   width: 3rem;
   height: 3rem;
 }
+.game_champs {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.game_champs > *:not(:last-child) {
+  margin-right: 1.5rem;
+}
 .game_champs_img {
   width: 4rem;
   height: 4rem;
@@ -391,6 +400,53 @@ body {
   border: 1px solid black;
   border-radius: 5px;
 }
+.game_champs_level {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.game_champs_level svg {
+  width: 1rem;
+  height: 1rem;
+}
+.game_champs_champ {
+  position: relative;
+}
+.game_champs_items {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.game_champs_items > *:not(:last-child) {
+  margin-right: 3px;
+}
+.game_champs_items_img {
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 1px solid black;
+}
 .game_stats {
   justify-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.game_stats > *:not(:last-child) {
+  margin-bottom: 0.8rem;
+}
+.game_stats_item {
+  display: flex;
+  align-items: center;
+}
+.game_stats_item img,
+.game_stats_item svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 0.5rem;
+  color: #cebe94;
 }
