--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -408,6 +408,15 @@ body {
     }
 
     &_champs {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        //position: relative;
+
+        & > *:not(:last-child) {
+            margin-right: 1.5rem;
+        }
         &_img {
             width: 4rem;
             height: 4rem;
@@ -415,8 +424,65 @@ body {
             border: 1px solid black;
             border-radius: 5px;
         }
+
+        &_level {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            // margin-bottom: 3px;
+            svg {
+                width: 1rem;
+                height: 1rem;
+            }
+        }
+
+        &_champ {
+            position: relative;
+        }
+
+        &_items {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            & > *:not(:last-child) {
+                margin-right: 3px;
+            }
+            &_img {
+                width: 1.5rem;
+                height: 1.5rem;
+                border: 1px solid black;
+            }
+        }
     }
     &_stats {
         justify-self: center;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        & > *:not(:last-child) {
+            margin-bottom: 0.8rem;
+        }
+
+        &_item {
+            display: flex;
+            align-items: center;
+
+            img,
+            svg {
+                width: 1.5rem;
+                height: 1.5rem;
+                margin-right: 0.5rem;
+                color: rgb(206, 190, 148);
+            }
+        }
     }
 }
