--- a/public/css/match.css
+++ b/public/css/match.css
@@ -557,6 +557,7 @@ body {
   text-align: center;
   border-collapse: collapse;
   border-spacing: 1rem;
+  overflow-x: auto;
 }
 .advanced_table tr,
 .advanced_table td,
@@ -564,7 +565,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1rem;
   transition: all 0.2s;
-  vertical-align: center;
+  vertical-align: middle;
 }
 .advanced_table tr:hover {
   background-color: rgba(0, 0, 0, 0.1);
@@ -572,6 +573,7 @@ body {
 .advanced_table_profile {
   display: flex;
   align-items: center;
+  text-align: left;
 }
 .advanced_table_profile img {
   width: 4rem;
@@ -596,4 +598,20 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.advanced_table_traits {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.advanced_table_units {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0.8rem;
+}
+.advanced_table_units_champ {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
