--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -1,8 +1,21 @@
 body {
     background-color: var(--background);
     overflow: hidden;
+    scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #dfdfdf;
+    border-radius: 10px;
+}
 .hidden {
     display: none;
 }
@@ -571,6 +584,70 @@ body {
 
     border-top: 1px solid rgba(0, 0, 0, 0.3);
     padding-top: 1rem;
+
+    &_active {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    &_desktop {
+        display: block;
+        overflow: auto;
+
+        &_layer {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+            z-index: 900;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: var(--black_box);
+        border: 1px solid #fff;
+        border-radius: 1rem;
+        z-index: 999;
+        box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+        padding: 1rem;
+
+        height: 80vh;
+        width: 90vw;
+
+        @media screen and (max-width: 1100px) {
+            height: 85vh;
+            width: 96vw;
+        }
+
+        @media screen and (max-width: 800px) {
+            height: 98vh;
+        }
+
+        &_close {
+            position: fixed;
+            z-index: 1000;
+            width: max-content;
+            top: 1rem;
+            right: 1rem;
+            color: #fff;
+            background-color: var(--main);
+            border-radius: 0.5rem;
+            padding: 0.3rem;
+            cursor: pointer;
+
+            svg {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 2rem;
+                height: 2rem;
+            }
+        }
+    }
 
     &_table {
         text-align: center;
