--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -155,6 +155,7 @@ body {
         height: 20rem;
         margin-bottom: 2rem;
         border-radius: 3px;
+        margin-top: 2rem;
     }
 
     &_history {
