--- a/public/css/match.css
+++ b/public/css/match.css
@@ -753,4 +753,54 @@ body {
 
 .summary {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+.summary_title {
+  grid-column: 1/-1;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.summary_box {
+  background-color: var(--box);
+  padding: 0.5rem;
+  box-shadow: 2px 2px 29px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 0.5rem;
+  transition: all 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.summary_box:hover {
+  transform: translateY(-3px);
+  box-shadow: 2px 2px 29px 6px rgba(0, 0, 0, 0.45);
+}
+.summary_winRate {
+  grid-column: 1/-1;
+}
+.summary_winRate_chart {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (max-width: 450px) {
+  .summary_winRate_chart {
+    width: 80%;
+  }
+}
+.summary_places {
+  grid-column: 1/-1;
+}
+.summary_places_chart {
+  width: 90%;
+}
+.summary_item_img {
+  width: 4rem;
+  height: 4rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
