--- a/resources/scss/base.scss
+++ b/resources/scss/base.scss
@@ -10,6 +10,7 @@
     --text: #fffffe;
     --black_box: #242629; //  var(--black_box)
     --background: #16161a;
+    --box: rgba(192, 192, 192, 0.1);
 
     --color-first: rgb(255, 215, 0);
     --color-first07: rgba(255, 215, 0, 0.7);
