login/register btn in match route

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -145,7 +145,7 @@ body {
 }
 
 .popup {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -287,7 +287,7 @@ body {
   height: 100%;
 }
 
-.hidden {
+.hidden_popup {
   top: -100% !important;
   transition: all 0.2s;
 }
