--- a/public/css/match.css
+++ b/public/css/match.css
@@ -2,6 +2,9 @@ body {
   background-color: var(--background);
   overflow: hidden;
   scroll-behavior: smooth;
+  background-image: none !important;
+  overflow: visible;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -23,12 +26,20 @@ body {
   display: none;
 }
 
+.login_btn {
+  position: static;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  justify-self: flex-end;
+}
+
 .match {
   color: var(--text);
   display: grid;
   grid-template-columns: 30% 70%;
   gap: 2rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-bottom: 4rem;
   width: 80%;
   margin-left: auto;
@@ -51,6 +62,11 @@ body {
   .match {
     grid-template-columns: 1fr;
   }
+}
+.match_login {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  justify-self: flex-end;
 }
 .match_loading {
   grid-column: 1/-1;
@@ -122,7 +138,7 @@ body {
   color: inherit;
 }
 .match_left {
-  grid-row: 1/2;
+  grid-row: 2/3;
   grid-column: 1/2;
 }
 @media screen and (max-width: 1000px) {
@@ -141,13 +157,13 @@ body {
   }
 }
 .match_right {
-  grid-row: 1/2;
+  grid-row: 2/3;
   grid-column: 2/3;
 }
 @media screen and (max-width: 1000px) {
   .match_right {
     grid-column: 1/-1;
-    grid-row: 2/3;
+    grid-row: 3/4;
   }
 }
 .match_profile {
