--- a/public/css/home.css
+++ b/public/css/home.css
@@ -193,6 +193,11 @@ body {
   justify-content: space-between;
   height: 100%;
 }
+.popup_form_back {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
 
 .popup_form_title {
   font-size: 3rem;
