--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -177,6 +177,12 @@ body {
     align-items: center;
     justify-content: space-between;
     height: 100%;
+
+    &_back{
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+    }
 }
 .popup_form_title {
     font-size: 3rem;
