--- a/public/css/home.css
+++ b/public/css/home.css
@@ -224,6 +224,14 @@ body {
   padding: 1rem;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
 }
+.popup_form_input_remember {
+  display: flex;
+  align-items: center;
+}
+.popup_form_input_remember input {
+  margin-right: 0.5rem;
+  margin-left: 0 !important;
+}
 
 .popup_form_input input {
   background-color: transparent;
