--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -85,6 +85,140 @@ body {
             margin-top: 7rem;
         }
     }
+
+    &_bookmarks{
+        position: fixed;
+        top: 1rem;
+        right: 2rem;
+        z-index: 900;
+
+        @media screen and (max-width:600px){
+            width: 200px;
+            right: 0;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%)
+        }
+
+
+        font-weight: normal;
+        // cursor: pointer;
+        transition: all 0.2s;
+
+        &_btn{
+            color: var(--text);
+            background-color: var(--main);
+            padding: 1rem 2rem;
+            border-radius: 0.5rem;
+            font-size: 1.6rem;
+            display: flex;
+            align-items: center;
+            transition: all .2s;
+            justify-content: center;
+            cursor: pointer;
+            svg{
+                margin-left: .5rem;
+            }
+
+        }
+
+        &_dropdown{
+            max-height: 400px;
+            height: 400px;
+            width: 200px;
+            overflow: visible;
+            transition: all .2s;
+            background-color: #fff !important;
+            position: relative;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+            &_logout{
+                width: 100%;
+                background-color: #72757e;
+                text-align: center;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 40px;
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+                svg{
+                    color: var(--text);
+                    width: 1.7rem;
+                    height: 1.7rem;
+                    margin-left: .5rem;
+                }
+                a{
+                    text-decoration: none;
+                    color: var(--text);
+                    text-transform: uppercase;
+                    text-align: center;
+                   font-size: 1.6rem;
+                    // font-weight: bold;
+                }
+            }
+
+            &_players{
+                overflow-y: auto;
+                max-height: 360px;
+                padding: .3rem;
+
+                &_title{
+                    text-align: center;
+                    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+                    font-size: 1.5rem;
+                    font-weight: bold;
+                    padding: .5rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: var(--main);
+
+                    svg{
+                        margin-left: .5rem;
+                        width: 20px;
+                        height: 20px;
+                    }
+                }
+
+                &_player{
+                    display: flex;
+                    align-items: center;
+                    text-decoration: none;
+                    color: black;
+                    font-size: 1.4rem;
+                    padding: .5rem 0;
+                    margin-bottom: .5rem;
+                    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  
+                    width: 194px;
+                    &_name{
+                        margin-left: .5rem;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
+                }
+            }
+        }
+
+
+    }
+}
+        
+.hidden_bookmark{
+    max-height: 0;
+    max-width: 0;
+    overflow: hidden;
+    transition: all .2s;
+}
+.btn_open{
+    width: 200px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 .home > * {
     margin-bottom: 3rem;
